# bustub

./: .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  GRADESCOPE.md.template  README.md  Vagrantfile  WALL-OF-SHAME.md  Windows.md  gradescope_sign.py  log.txt
src/: CMakeLists.txt
src/binder/: CMakeLists.txt  bind_copy.cpp  bind_create.cpp  bind_insert.cpp  bind_select.cpp  bind_variable.cpp  binder.cpp  bound_statement.cpp  fmt_impl.cpp  keyword_helper.cpp  node_tag_to_string.cpp  nodetype_to_string.cpp  parser.cpp  sql_statement.cpp  transformer.cpp
src/buffer/: CMakeLists.txt  arc_replacer.cpp  buffer_pool_manager.cpp  buffer_pool_manager_instance.cpp  buffer_pool_manager_pool.cpp  clock_replacer.cpp  lru_k_replacer.cpp  lru_replacer.cpp  parallel_ buffer_pool_manager.cpp  parallel_buffer_pool_manager.cpp
src/catalog/: CMakeLists.txt  column.cpp  schema.cpp  table_generator.cpp
src/common/: CMakeLists.txt  bustub_ddl.cpp  bustub_instance.cpp  config.cpp  macros.cpp
src/concurrency/: CMakeLists.txt  lock_manager.cpp  transaction_manager.cpp  transaction_manager_impl.cpp  watermark.cpp
src/container/: CMakeLists.txt
src/execution/: CMakeLists.txt  aggregation_executor.cpp  copy_from_executor.cpp  delete_executor.cpp  distinct_executor.cpp  execution_common.cpp  executor_factory.cpp  external_merge_sort_executor.cpp  filter_executor.cpp  fmt_impl.cpp  hash_join_executor.cpp  index_scan_executor.cpp  init_check_executor.cpp  insert_executor.cpp  limit_executor.cpp  mock_scan_executor.cpp  nested_index_join_executor.cpp  nested_loop_join_executor.cpp  plan_node.cpp  projection_executor.cpp  seq_scan_executor.cpp  sort_executor.cpp  topn_check_executor.cpp  topn_executor.cpp  topn_per_group_executor.cpp  update_executor.cpp  values_executor.cpp  window_aggregate_executor.cpp  window_function_executor.cpp
src/optimizer/: CMakeLists.txt  column_pruning.cpp  eliminate_true_filter.cpp  merge_filter_nlj.cpp  merge_filter_scan.cpp  merge_projection.cpp  nlj_as_hash_join.cpp  nlj_as_index_join.cpp  optimizer.cpp  optimizer_custom_rules.cpp  optimizer_internal.cpp  order_by_index_scan.cpp  seqscan_as_indexscan.cpp  sort_limit_as_topn.cpp
src/planner/: CMakeLists.txt  expression_factory.cpp  plan_aggregation.cpp  plan_expression.cpp  plan_func_call.cpp  plan_insert.cpp  plan_select.cpp  plan_table_ref.cpp  plan_window_aggregation.cpp  plan_window_function.cpp  planner.cpp
src/primer/: .clang-tidy  CMakeLists.txt  count_min_sketch.cpp  hyperloglog.cpp  hyperloglog_presto.cpp  orset.cpp  orset_driver.cpp  p0_trie.cpp  skiplist.cpp  trie.cpp  trie_store.cpp
src/recovery/: CMakeLists.txt  checkpoint_manager.cpp  log_manager.cpp  log_recovery.cpp
src/storage/: CMakeLists.txt
src/type/: CMakeLists.txt  bigint_type.cpp  boolean_type.cpp  decimal_type.cpp  integer_parent_type.cpp  integer_type.cpp  smallint_type.cpp  timestamp_type.cpp  tinyint_type.cpp  type.cpp  value.cpp  varlen_type.cpp  vector_type.cpp
test/: .clang-tidy  CMakeLists.txt
test/backtrace/: crash_test.cpp
test/binder/: binder_test.cpp
test/buffer/: arc_replacer_performance_test.cpp  arc_replacer_test.cpp  buffer_pool_manager_instance_test.cpp  buffer_pool_manager_test.cpp  clock_replacer_test.cpp  counter.h  lru_k_replacer_test.cpp  lru_replacer_test.cpp  mock_buffer_pool_manager.h  parallel_buffer_pool_manager_test.cpp
test/catalog/: catalog_test.cpp
test/common/: rwlatch_test.cpp  rwmutex_test.cpp
test/concurrency/: common_checker.h  deadlock_detection_test.cpp  lock_manager_test.cpp  lock_manager_test.cpp.disabled  transaction_test.cpp  txn_integration_test.cpp
test/container/: hash_table_page_test.cpp  hash_table_test.cpp
test/csv/: simple_test.csv
test/execution/: executor_test.cpp  executor_test_util.h
test/include/: test_util.h
test/primer/: count_min_sketch_test.cpp  hyperloglog_test.cpp  orset_test.cpp  skiplist_test.cpp  starter_test.cpp  starter_trie_test.cpp  trie_debug_answer.h  trie_debug_test.cpp  trie_noncopy_test.cpp  trie_store_noncopy_test.cpp  trie_store_test.cpp  trie_test.cpp
test/project3-sql/: p3.03-delete.slt  p3.05-empty_table.slt
test/recovery/: recovery_test.cpp  recovery_test.cpp.disabled
test/sql/: baby_arithmetic.slt  copy.slt  hash_join.slt  index.slt  intro.slt  nested_index_join.slt  order_by.slt  p0.01-lower-upper.slt  p0.02-function-error.slt  p0.03-string-scan.slt  p3.00-primer.slt  p3.01-seqscan.slt  p3.02-insert.slt  p3.03-delete.slt  p3.03-update.slt  p3.04-delete.slt  p3.04-index-scan.slt  p3.05-empty-table.slt  p3.05-index-scan-btree.slt  p3.05-index-scan-hash.slt  p3.05-index-scan.slt  p3.06-empty-table.slt  p3.06-simple-agg.slt  p3.07-group-agg-1.slt  p3.07-simple-agg.slt  p3.08-group-agg-1.slt  p3.08-group-agg-2.slt  p3.09-group-agg-2.slt  p3.09-simple-join.slt  p3.10-multi-way-join.slt  p3.10-simple-join.slt  p3.11-multi-way-join.slt  p3.11-repeat-execute.slt  p3.12-nested-index-join.slt  p3.12-repeat-execute.slt  p3.13-nested-index-join.slt  p3.13-sort-limit.slt  p3.14-hash-join.slt  p3.14-topn.slt  p3.15-integration-1.slt  (+21 more)
test/storage/: b_plus_tree_concurrent_test.cpp  b_plus_tree_contention_test.cpp  b_plus_tree_delete_test.cpp  b_plus_tree_insert_test.cpp  b_plus_tree_print_test.cpp  b_plus_tree_sequential_scale_test.cpp  b_plus_tree_test_util.h  b_plus_tree_tombstone_test.cpp  cow_buffer_test.cpp  disk_manager_memory_test.cpp  disk_manager_test.cpp  disk_scheduler_test.cpp  extendible_htable_bucket_page_test.cpp  extendible_htable_page_test.cpp  page_guard_test.cpp  temporary_tuple_page_test.cpp  tmp_tuple_page_test.cpp  write_back_cache_test.cpp
test/table/: header_page_test.cpp  tuple_test.cpp
test/txn/: txn_abort_serializable_test.cpp  txn_common.h  txn_executor_test.cpp  txn_index_concurrent_test.cpp  txn_index_test.cpp  txn_scan_test.cpp  txn_timestamp_test.cpp
test/type/: type_test.cpp
tools/: CMakeLists.txt  backtrace.cpp
tools/b_plus_tree_printer/: CMakeLists.txt  b_plus_tree_printer.cpp
tools/bpm_bench/: CMakeLists.txt  bpm_bench.cpp
(+643 files in other folders)
