add_subdirectory(shell)
add_subdirectory(nc-shell)
add_subdirectory(sqllogictest)
add_subdirectory(wasm-shell)
add_subdirectory(b_plus_tree_printer)
add_subdirectory(wasm-bpt-printer)
add_subdirectory(terrier_bench)
add_subdirectory(bpm_bench)
add_subdirectory(btree_bench)
add_subdirectory(htable_bench)

add_backward(shell)
add_backward(nc-shell)
add_backward(sqllogictest)
add_backward(terrier-bench)
add_backward(b_plus_tree_printer)
